# ChangeLog for dev-embedded/gnusim8085
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-embedded/gnusim8085/ChangeLog,v 1.10 2007/02/21 19:13:31 calchan Exp $

  21 Feb 2007; Denis Dupeyron <calchan@gentoo.org>
  files/digest-gnusim8085-1.2.89, Manifest:
  Transition to Manifest2.

  20 Sep 2006; Denis Dupeyron <calchan@gentoo.org> gnusim8085-1.2.90.ebuild:
  Fixed doc installation.

*gnusim8085-1.2.90 (18 Sep 2006)

  18 Sep 2006; Denis Dupeyron <calchan@gentoo.org>
  +gnusim8085-1.2.90.ebuild:
  Version bump and ebuild cleanup, closing bug #146684.

  11 Feb 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  gnusim8085-1.2.89.ebuild:
  Fix dependencies for modular X (bug #121544).

  09 Oct 2005; Daniel Black <dragonheart@gentoo.org>
  gnusim8085-1.2.89.ebuild:
  fix dependancies and other qa fixes - bug #106550. Thanks TGL

  24 Mar 2004; Daniel Black <dragonheart@gentoo.org> gnusim8085-1.2.89.ebuild:
  Marked stable on x86

*gnusim8085-1.2.89 (19 Feb 2004)

  19 Feb 2004; Daniel Black <dragonheart@gentoo.org> :
  Initial import. bug #34418 - thanks to J. Santiago Hirschfeld
  <jsantiagoh@yahoo.com.ar>
