@@ -1,5 +1,6 @@
 DIST GNUSim8085-1.2.89.tar.bz2 477742 RMD160 cf3d511eefd96d538e978f3866e4d06550f6a1e5 SHA1 787313bd9d92f43c9279995414d8d4e06ced0955 SHA256 1ffdf8a036303ba26162de27c9abd5a5978844dfe0b9f941e230e8a906ce6d6e
 DIST GNUSim8085-1.2.90.tar.gz 662735 RMD160 1b262ddd9d280f25ca9a4f331f1b56a1a33f9698 SHA1 9b4c6dbfb49e2922b5459b25a087cd29245824e3 SHA256 b4f56c2fa79b423bbb35d2d3963cf96d9444db00bae1670b13783a085bc33f47
+DIST gnusim8085-1.3.tar.gz 523901 RMD160 45a1d651b68bb0b24ad61462743149b97684b4aa SHA1 078ffef2ca3d5c65aff83405e22ef595e3d75276 SHA256 9063d54121d75dda26cb14a7e5874a1d5b113240cc5607e747bf2a0585e29ecc
 EBUILD gnusim8085-1.2.89.ebuild 1034 RMD160 1a2eb579ca524e65fcb55ad15b43c8eb1bda603d SHA1 9d69ac57c656899f67a17eb6cafef0482685ae45 SHA256 6d9490a81c74b636c8e1fb711c372113841c7619d128ddba7b1c67b04848eb9c
 MD5 1179033564d8dcd6e907598c823c93f6 gnusim8085-1.2.89.ebuild 1034
 RMD160 1a2eb579ca524e65fcb55ad15b43c8eb1bda603d gnusim8085-1.2.89.ebuild 1034
@@ -8,10 +9,14 @@ EBUILD gnusim8085-1.2.90.ebuild 1349 RMD160 1ab41be62018f506631e871c6ca9c1a099d3
 MD5 fc816ec1cfc85718273d722fb4956ed5 gnusim8085-1.2.90.ebuild 1349
 RMD160 1ab41be62018f506631e871c6ca9c1a099d313b6 gnusim8085-1.2.90.ebuild 1349
 SHA256 5ad38f67618404be6fe93379497751a36cb5255f4545cdd9fb5e94e3555bafce gnusim8085-1.2.90.ebuild 1349
-MISC ChangeLog 1184 RMD160 ce891b6b9a39dd5d8a2dd6f0c28134bc3327e9e7 SHA1 3855a5eb9d60a8aca33cd1f21916f985160d2616 SHA256 db18bf7fd23eb7df2fa103fc0a703df0c249c4929b23d271bd53c684f3f005f9
-MD5 834f6815fa7a963011e6952cf8cf2911 ChangeLog 1184
-RMD160 ce891b6b9a39dd5d8a2dd6f0c28134bc3327e9e7 ChangeLog 1184
-SHA256 db18bf7fd23eb7df2fa103fc0a703df0c249c4929b23d271bd53c684f3f005f9 ChangeLog 1184
+EBUILD gnusim8085-1.3.ebuild 1360 RMD160 7915b4934189742e9793d021e28e9eefbb876f9c SHA1 435c262f6f182321d465a4ce09a7b3360edc0648 SHA256 a52691e079331d31e9b2f88a9ebdcccced43da0a352fc6a7b6ad78e42ffd0d33
+MD5 aa58969a51fa5fad5cc2fd533a46e325 gnusim8085-1.3.ebuild 1360
+RMD160 7915b4934189742e9793d021e28e9eefbb876f9c gnusim8085-1.3.ebuild 1360
+SHA256 a52691e079331d31e9b2f88a9ebdcccced43da0a352fc6a7b6ad78e42ffd0d33 gnusim8085-1.3.ebuild 1360
+MISC ChangeLog 1321 RMD160 a875050ffb5af3fe5625ee049a1fdf252197e575 SHA1 68d0a37ecb46013697f245a91e501dd70c2beee4 SHA256 604d1d861f5dcde104b3ac657999acaef0dac0095f7a5f9675386a94ef9a4adb
+MD5 676ef8d0675fa0e25f35eb2b369e8b30 ChangeLog 1321
+RMD160 a875050ffb5af3fe5625ee049a1fdf252197e575 ChangeLog 1321
+SHA256 604d1d861f5dcde104b3ac657999acaef0dac0095f7a5f9675386a94ef9a4adb ChangeLog 1321
 MISC metadata.xml 289 RMD160 3d5ea948914d038313b51de0376cbde4c432d836 SHA1 287eab5c49dda95c90951717aa701bf1cb59fce1 SHA256 5bca7e11ae80ec3effd51c7807015882bd13cd5340d7a7b2eaab62e33fc97dc4
 MD5 948cd0d80d554fa9755a77f3b802cea5 metadata.xml 289
 RMD160 3d5ea948914d038313b51de0376cbde4c432d836 metadata.xml 289
@@ -22,3 +27,6 @@ SHA256 8ad100a413af9f4d4d255e19f2231eca0ac2be50051de3d8592646e4304033a0 files/di
 MD5 b4d06de41141938e4c3ca547b7ccd2a8 files/digest-gnusim8085-1.2.90 253
 RMD160 7210e2fc8e0cff49baf0c940282c391246225108 files/digest-gnusim8085-1.2.90 253
 SHA256 cceb6c99ea52c3c6bb53a9a3cfeaa8ec26f771f151acbf57a12d5be539f6d200 files/digest-gnusim8085-1.2.90 253
+MD5 f048c162bf73de2e8d0e23386d9d6aac files/digest-gnusim8085-1.3 244
+RMD160 cd65cd743ca92ec3fa9fac239d942f35776754c8 files/digest-gnusim8085-1.3 244
+SHA256 bc67decf636cfa37173e7073f390d6df10cac269fd537732b5b766d8ecd3f725 files/digest-gnusim8085-1.3 244
