@@ -1,0 +1,3 @@
+MD5 03ad397d95e533137797af20a81f1223 gnusim8085-1.3.tar.gz 523901
+RMD160 45a1d651b68bb0b24ad61462743149b97684b4aa gnusim8085-1.3.tar.gz 523901
+SHA256 9063d54121d75dda26cb14a7e5874a1d5b113240cc5607e747bf2a0585e29ecc gnusim8085-1.3.tar.gz 523901
