@@ -1,6 +1,11 @@
 # ChangeLog for dev-embedded/gnusim8085
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-embedded/gnusim8085/ChangeLog,v 1.10 2007/02/21 19:13:31 calchan Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-embedded/gnusim8085/ChangeLog,v 1.11 2007/07/29 12:49:28 calchan Exp $
+
+*gnusim8085-1.3 (29 Jul 2007)
+
+  29 Jul 2007; Denis Dupeyron <calchan@gentoo.org> +gnusim8085-1.3.ebuild:
+  Version bump (bug #184328).
 
   21 Feb 2007; Denis Dupeyron <calchan@gentoo.org>
   files/digest-gnusim8085-1.2.89, Manifest:
